Fixed issues